--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Thumbnail Downloader: फ्री में HD थंबनेल डाउनलोड करें</title>
-    <meta name="title" content="YouTube Thumbnail Downloader: फ्री में HD थंबनेल डाउनलोड करें" />
-    <meta name="description"
-        content="YouTube वीडियो के थंबनेल को HD, HQ और SD क्वालिटी में डाउनलोड करें। कोई सॉफ़्टवेयर या रजिस्ट्रेशन की जरूरत नहीं – बस लिंक पेस्ट करें और डाउनलोड करें!" />
-    <meta name="keywords" content="YouTube Thumbnail Save करें, यूट्यूब वीडियो थंबनेल डाउनलोड, फ्री में यूट्यूब थंबनेल सेव करने का तरीका, HD YouTube Thumbnail Download, YouTube Cover Image Save करें, YouTube Thumbnail Downloader, YouTube Thumbnail Save, HD Thumbnail Download, YouTube से Thumbnail कैसे डाउनलोड करें, YouTube वीडियो Thumbnail Download, यूट्यूब थंबनेल डाउनलोड करने का तरीका, YouTube Thumbnail Save करने का फ्री तरीका, YouTube से HD Thumbnail कैसे निकालें, YouTube Video Thumbnail Save करें Mobile में
+    <title>YouTube Thumbnail Downloader: Download HD Thumbnails for Free</title>
+<meta name="title" content="YouTube Thumbnail Downloader: Download HD Thumbnails for Free" />
+<meta name="description"
+    content="Download YouTube video thumbnails in HD, HQ, and SD quality. No software or registration required – just paste the link and download!" />
+<meta name="keywords" content="YouTube Thumbnail Save, Download YouTube Video Thumbnails, Free YouTube Thumbnail Save Method, HD YouTube Thumbnail Download, Save YouTube Cover Image, YouTube Thumbnail Downloader, YouTube Thumbnail Save, HD Thumbnail Download, How to Download YouTube Thumbnails, YouTube Video Thumbnail Download, YouTube Thumbnail Download Method, Free Way to Save YouTube Thumbnails, How to Extract HD Thumbnail from YouTube, Save YouTube Video Thumbnails on Mobile
 " />
+
     <title>YouTube Thumbnail Downloader</title>
     <style>
         body {
